[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/OXYGEN_TANK.gd" type="Script" id=1]
[ext_resource path="res://sprites/Sprites/Furniture and defend/tank/oxygen_tank.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.6667, 40 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.44665
height = 38.7951

[node name="OXYGEN_TANK" type="Area2D" groups=[
"no_ox",
"without",
]]
scale = Vector2( 0.4, 0.6 )
z_index = 31
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="stan_timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="oxygen_tank" type="Sprite" parent="."]
scale = Vector2( 4, 2.5 )
z_index = 10
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.311653, 33.6414 )
rotation = 1.5708
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_OXYGEN_TANK_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_OXYGEN_TANK_body_exited"]
[connection signal="timeout" from="stan_timer" to="." method="_on_stan_timer_timeout"]
